/*
 * $Id: Changelog,v 1.30 2003/08/29 18:28:30 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-30 11:59 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * include/xwtcmd.ch
    + Added mapping Quit => XWTQuit()

  * xwt_test.prg
    ! added a QUIT sequence

2003-08-29 15:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  *include/xwtcmd.ch
   Changed TOGGLEBUTTON and CHECKBOX commands to handle color/font
  * src/checkbox.prg
    src/togglebutton.prg
    ! Added support for color/fonts
  * src/xwt_gtk/xwt_gtk.c
    ! minor update
  * test/xwt_test.prg
    * now togglebuttons and checkbox has diferent colors
   Please note this is an work in progress    


2003-08-28 23:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  *src/button.prg 
    ! Enhaced to accept font/fontsize and color parameter
  *src/xwt_api.c 
    ! Changed XWT_SET_PROPERTY/XWT_GET_PROPERTY to handle the font/color properties on buttons
  *src/xwt_gtk/xwt_gtk.c 
    ! xtw_drv_set_property changes to properly handle font/color properties on buttons
  * test/xwt_test.prg
    ! Now buttons can has diferent color 
  *include/xwtcmd.ch
    ! buttons now can has color , as also other font and font size    
   Please note this is an work in progress

>>>>>>> 1.30
2003-08-27 17:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  *include/xwt.ch
  *include/xwtcmd.ch
    ! menuitems now can has color , as also other font and font size
  *include/xwt_api.h
    !small change to hold all 4 colors state   
  *src/menuitem.prg 
    ! Enhaced to accept font/fontsize and color parameter
  *src/xwt_api.c 
    ! Changed XWT_SET_PROPERTY/XWT_GET_PROPERTY to handle the font/color properties on menutitems
  *src/xwt_gtk/xwt_gtk.c 
    ! xtw_drv_set_property changes to properly handle font/color properties on menuitems
  * test/xwt_test.prg