@@ -1,5 +1,5 @@
 /*
- * $Id: Changelog,v 1.30 2003/08/29 18:28:30 lculik Exp $
+ * $Id: Changelog,v 1.31 2003/08/30 10:00:39 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-08-30 18:40 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * src/radiobutton.prg
+
+    ! Added support for color/fonts
+  * src/xwt_gtk/xwt_gtk.c
+    ! minor fixes
+  * test/xwt_test.prg
+    * now Radiobuttons  and checkbox has diferent colors
+   Please note this is an work in progress    
 
 2003-08-30 11:59 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
   * include/xwtcmd.ch
